<?xml version="1.0" encoding="utf-8"?>


<!--
  ~ Copyright (c) 2020 Dennis Lang (LanDen Labs) landenlabs@gmail.com
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
  ~ associated documentation files (the "Software"), to deal in the Software without restriction, including
  ~ without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the
  ~ following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial
  ~ portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT
  ~ LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN
  ~ NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
  ~ WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
  ~ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  ~
  ~ @author Dennis Lang
  ~ @see http://LanDenLabs.com/
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--
    id must match entry in mobile_navigation !!
    label must match entry in mobile_navigation !!
    -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_start"
            android:icon="@drawable/ic_menu_start"
            android:title="@string/menu_start" />

        <!--
        <item
            android:id="@+id/nav_graphA"
            android:icon="@drawable/scr_graph_a"
            android:title="@string/menu_status_a"
            android:tooltipText="Net Status"
            tools:targetApi="o" />
        -->

        <item
            android:id="@+id/nav_graph_dv"
            android:icon="@drawable/scr_graph_dv"
            android:title="@string/menu_graph_dv"
            android:tooltipText="Temperatue Humidity"
            tools:targetApi="o" />

        <item
            android:id="@+id/nav_graph_sn"
            android:icon="@drawable/scr_graph_sn"
            android:title="@string/menu_graph_sn"
            android:tooltipText="Pressure"
            tools:targetApi="o" />

        <item
            android:id="@+id/nav_table"
            android:icon="@drawable/ic_menu_table"
            android:title="@string/menu_table"
            android:tooltipText="Tabular Data View"
            tools:targetApi="o" />

        <item
            android:id="@+id/nav_logvwr"
            android:icon="@drawable/ic_menu_logvwr"
            android:title="@string/menu_logvwr"
            android:tooltipText="Log Viewer"
            tools:targetApi="o" />

        <item
            android:id="@+id/nav_cfg"
            android:icon="@drawable/ic_menu_cfg"
            android:title="@string/menu_cfg"
            android:tooltipText="Configuration"
            tools:targetApi="o" />

    </group>
</menu>
